# Bbannotate

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/instructions/: frontend.instructions.md  python_coding.instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: PUBLISHING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/canvas/: AnnotationCanvas.tsx  index.ts
frontend/src/components/ui/: AnnotationList.test.tsx  AnnotationList.tsx  ConfirmDialog.tsx  ExportDialog.tsx  ImageList.test.tsx  ImageList.tsx  ImageUpload.tsx  LabelManager.test.tsx  LabelManager.tsx  ProjectManager.tsx  Toast.tsx  Toolbar.test.tsx  Toolbar.tsx  index.ts
frontend/src/hooks/: index.ts  useAnnotations.test.ts  useAnnotations.ts  useImages.test.ts  useImages.ts  useToast.ts
frontend/src/lib/: api.test.ts  api.ts  constants.ts
frontend/src/test/: setup.ts
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: index.ts
projects/flyer_items_20260204_193144/: project.json
projects/flyer_items_20260204_193144/annotations/: page-01.json  page-02.json  page-03.json
src/: __init__.py  cli.py  main.py  utils.py
src/api/: __init__.py  routes.py
src/models/: __init__.py  annotations.py
src/services/: __init__.py  annotation_service.py  browser_session_service.py  export_service.py  project_service.py
tests/: conftest.py  test_annotation_service.py  test_api.py  test_cli.py  test_export_service.py  test_models.py  test_project_service.py  test_utils.py
